# ZS-MEM

./: Makefile  README.md  bwamem_extra.c  bwamez.c  bwamez.h  main.c  time_prof.h
bwa/: CMakeLists.txt  Makefile  bwamem.c  bwamem.h  bwt.c  bwt.h  fastmap.c  kseq.h  ksw.c  kthread.c  qualfa2fq.pl  utils.h
